k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-mon
  labels:
    name: cert-mon
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-mon-db
  labels:
    name: cert-mon-db
    environment: production
